	* lib/transtab.cpp :
	* lib/transtab.h :

	  - Transtab now replaced by updatetab.

	* lib/atom.cpp :
	* lib/atom.h :

	  - Removed and replaced by the new fact.cpp and fact.h.

	* lib/fact.cpp :
	* lib/fact.h :

	  - Added type() and truth() functions.

	* lib/seqtab.cpp :
	* lib/seqtab.h :

	  - Renamed transformation to update (trasnref to updateref).

	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Cleanup. Modified to keep up with all the name changes.

2003-12-31  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/transtab.cpp :
	* lib/transtab.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/list.cpp :
	* lib/list.h :

	  - Cleanup.

	* lib/expression.cpp :
	* lib/expression.h :

	  - Expression is now a list of facts, not atoms.

	* lib/Makefile.in :
	* lib/fact.cpp :
	* lib/fact.h :

	  - Renamed atoms to facts.


2003-12-30  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/vlad.h :

	  - Cleanups.

	* lib/Makefile.in :
	* lib/polbase.cpp :
	* lib/polbase.h :
 
	  - Added a policy base class. intended as a rewrite of the kb class.

2003-12-12  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/vlad.h :

	  - Simplified class by defining an array of stringlists instead
	    of separately managing 6 individual stringlists.

	  - Identifier types now made separate from each other.

2003-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile.in :
	* rules.mk :
	* lib/Makefile.in : 
	* main/Makefile.in :

	  - Overhauled build system.

2003-08-27  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* rules.mk :

	  - Removed -Wnested-externs as some compilers do not accept such
	    option.
